reorganize tests & cleanup garbage

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,11 @@ warn_unused_ignores = True
 disallow_untyped_defs = True
 allow_redefinition = True
 follow_imports = skip
+
+[tool:pytest]
+minversion = 7.0
+addopts = -ra -q
+testpaths =
+    tests
+env_files =
+    tests/.env
