--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,9 @@ pytest-dotenv = "*"
 twine = "*"
 build = "*"
 mypy = "*"
+chardet = "*"
+isort = "*"
+datamodel-code-generator = {extras = ["http"], version = "*"}
 
 [requires]
 python_version = "3.11"
