--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,6 @@ repos:
     -   id: trailing-whitespace
     -   id: debug-statements
     -   id: double-quote-string-fixer
-    -   id: name-tests-test
 
 -   repo: https://github.com/psf/black
     rev: 23.1.0
@@ -29,6 +28,7 @@ repos:
     hooks:
     -   id: mypy
         args: [--no-strict-optional, --ignore-missing-imports, --config-file=setup.cfg]
+        exclude: 'tests/'
 
 -   repo: https://github.com/pycqa/flake8
     rev: 6.0.0
