--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,6 @@ skip_gitignore = true
 pythonpath = ["src"]
 env_files = ["tests/.env"]
 testpaths = ["tests"]
+addopts = [
+    "--import-mode=importlib",
+]
