--- a/examples/.env.example.env
+++ b/examples/.env.example.env
@@ -1,6 +1,7 @@
 URL=https://demo.mediascout.ru
-USERNAME=
-PASSWORD=
+MEDIASCOUT_USERNAME=
+MEDIASCOUT_PASSWORD=
+API_URL_PREFIX=/webapi/v1
 
 # Set 'debug' for logging requests/responses to mediascout to ord_mediascout_client.log
 LOGGING=debug
