--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ requests = "*"
 pydantic = ">=1.0, <2.0"
 python-dotenv = "*"
 rich = "*"
+ord-mediascout-client = {file = ".", editable = true}
 
 [dev-packages]
 pre-commit = "*"
