--- a/tests/.env.example.env
+++ b/tests/.env.example.env
@@ -4,3 +4,22 @@ MEDIASCOUT_PASSWORD=
 
 # Set 'debug' for logging requests/responses to mediascout to ord_mediascout_client.log
 LOGGING=debug
+
+# Contract test data
+CLIENT_ID=
+INITIAL_CONTRACT_CLIENT_ID=
+CONTRACTOR_ID=
+FINAL_CONTRACT_ID=
+
+# Invoice test data
+FINAL_CONTRACT_ID_INVOICE=
+INITIAL_CONTRACT_ID_INVOICE=
+ER_ID=
+
+# Creative test data
+CREATIVE_IDS=
+SRC_URL=
+
+# Feed test data
+FEED_ID=
+ELEMENTS=
