--- a/tests/.env.example.env
+++ b/tests/.env.example.env
@@ -5,22 +5,15 @@ MEDIASCOUT_PASSWORD=
 # Set 'debug' for logging requests/responses to mediascout to ord_mediascout_client.log
 LOGGING=debug
 
-# Contract test data
+# Setup Tests Data
 CLIENT_ID=
 INITIAL_CONTRACT_CLIENT_ID=
 CONTRACTOR_ID=
 FINAL_CONTRACT_ID=
-
-# Invoice test data
-FINAL_CONTRACT_ID_INVOICE=
-INITIAL_CONTRACT_ID_INVOICE=
+INITIAL_CONTRACT_ID=
 ER_ID=
-
-# Creative test data
 CREATIVE_IDS=
-SRC_URL=
-
-# Feed test data
+IMAGE_SRC_URL=
 FEED_ID=
-ELEMENTS=
-MEDIA_IDS=
+FEED_ELEMENTS=
+FEED_MEDIA_IDS=
