--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ord_mediascout_client"
-version = "0.0.47"
+version = "0.0.48"
 authors = [
   { name="Alexey Ruzin", email="ruzin@me.com" },
   { name="Ilya Chegodayev", email="lighter97@gmail.com" },
@@ -28,6 +28,18 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+#[tool.hatch.build]
+#include = ["src/ord_mediascout_client/**"]
+
+#[tool.hatch.build.targets.sdist]
+#include = ["src/**", "pyproject.toml"]
+
+#[tool.hatch.build.targets.wheel]
+#packages = ["src/ord_mediascout_client"]
+
+#[build-system]
+#requires = ["setuptools", "wheel"]
+#build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 120
