--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ord_mediascout_client"
-version = "0.0.49"
+version = "0.0.50"
 authors = [
   { name="Alexey Ruzin", email="ruzin@me.com" },
   { name="Ilya Chegodayev", email="lighter97@gmail.com" },
@@ -27,6 +27,23 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+
+[tool.hatch.build]
+include = ["**"]
+exclude = [
+    "*.pyc",
+    "docs/",
+    "dist/",
+    "examples/",
+    "Pipfile",
+    "Pipfile.lock",
+    "*.log",
+    ".env",
+    ".gitignore",
+    ".idea/",
+    ".*",
+]
 
 [tool.black]
 line-length = 120
