--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ pydantic = ">=1.0, <2.0"
 python-dotenv = "*"
 rich = "*"
 twine = "*"
+ord-mediascout-client = {file = ".", editable = true}
 
 [dev-packages]
 pre-commit = "*"
