--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  "pydantic>=1.10.7",
+  "pydantic>=1.10.7,<2.0",
   "requests>=2.28.2",
   "python-dotenv>=1.0.0",
 ]
